--- a/VaccineC/src/app/pages/produto/produto.component.scss
+++ b/VaccineC/src/app/pages/produto/produto.component.scss
@@ -12,3 +12,65 @@
 :host ::ng-deep .mat-tab-group {
     height: 100% !important;
 }
+
+:host ::ng-deep .mat-table {
+  border-radius: 0.75rem !important;
+  box-shadow: 0px 3px 3px -2px rgb(0 0 0 / 10%), 0px 3px 4px 0px rgb(0 0 0 / 10%), 0px 1px 8px 0px rgb(0 0 0 / 10%);
+}
+
+form {
+  width: 100% !important;
+}
+
+.search-group {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  font-size: 14px;
+  margin-bottom: 2rem;
+}
+
+#search-table {
+  display: flex;
+  justify-content: center;
+  overflow-x: initial;
+  margin: 0.5rem;
+  border: none
+}
+
+.mat-button-entry {
+  margin-bottom: 0px !important;
+  align-self: center !important;
+}
+
+.spinner-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.button-container {
+  display: inline-block;
+  position: relative;
+  margin-bottom: 0px !important;
+  align-self: center !important;
+}
+
+.spinner{
+  display: flex;
+    align-content: center;
+    justify-content: space-between;
+    align-items: center;
+}
+.edit-button {
+  height: 40px;
+  bottom: 6px;
+  margin-left: 10px;
+}
