--- a/VaccineC/src/app/pages/produto/produto.component.scss
+++ b/VaccineC/src/app/pages/produto/produto.component.scss
@@ -1,27 +1,3 @@
-.float-btn {
-    z-index: 100;
-    position: absolute;
-    bottom: 24px;
-    right: 36px;
-}
-
-:host ::ng-deep .mat-tab-body-wrapper {
-    height: 100% !important;
-}
-
-:host ::ng-deep .mat-tab-group {
-    height: 100% !important;
-}
-
-:host ::ng-deep .mat-table {
-  border-radius: 0.75rem !important;
-  box-shadow: 0px 3px 3px -2px rgb(0 0 0 / 10%), 0px 3px 4px 0px rgb(0 0 0 / 10%), 0px 1px 8px 0px rgb(0 0 0 / 10%);
-}
-
-form {
-  width: 100% !important;
-}
-
 .search-group {
   display: flex;
   flex-direction: row;
@@ -31,17 +7,22 @@ form {
   margin-bottom: 2rem;
 }
 
-#search-table {
-  display: flex;
-  justify-content: center;
-  overflow-x: initial;
-  margin: 0.5rem;
-  border: none
+.search-table-content {
+  padding-left: 0px;
+  padding-right: 0px;
+}
+
+:host ::ng-deep .search-group .mat-form-field-wrapper {
+  padding: 0px;
 }
 
 .mat-button-entry {
   margin-bottom: 0px !important;
   align-self: center !important;
+}
+
+form {
+  width: 100% !important;
 }
 
 .spinner-container {
@@ -69,8 +50,35 @@ form {
     justify-content: space-between;
     align-items: center;
 }
+
+.search-button {
+  height: 40px;
+  bottom: 6px;
+  margin-left: 5px;
+}
+
 .edit-button {
   height: 40px;
   bottom: 6px;
   margin-left: 10px;
+}
+
+.float-btn {
+  z-index: 100;
+  position: absolute;
+  bottom: 24px;
+  right: 36px;
+}
+
+:host ::ng-deep .mat-tab-body-wrapper {
+  height: 100% !important;
+}
+
+:host ::ng-deep .mat-tab-group {
+  height: 100% !important;
+}
+
+:host ::ng-deep .mat-chip {
+  font-size: 12px !important;
+  color: #858796 !important;
 }
