--- a/VaccineC/src/app/pages/produto/produto.component.scss
+++ b/VaccineC/src/app/pages/produto/produto.component.scss
@@ -82,3 +82,17 @@ form {
   font-size: 12px !important;
   color: #858796 !important;
 }
+
+.mat-footer-row {
+  font-weight: bold !important;
+}
+
+.mat-column-Warning {
+  flex: 0 0 100px !important;
+  white-space: unset !important;
+}
+
+.mat-cell-Warning {
+  flex: 0 0 100px !important;
+  white-space: unset !important;
+}
