--- a/VaccineC/src/styles.scss
+++ b/VaccineC/src/styles.scss
@@ -178,3 +178,9 @@ html {
 .div-row-input {
   margin-top: 0.5rem;
 }
+
+.small-text {
+  font-size: 10px !important;
+  color: gray !important;
+  font-weight: normal !important;
+}
