--- a/VaccineC/src/app/pages/produto/produto.component.html
+++ b/VaccineC/src/app/pages/produto/produto.component.html
@@ -44,7 +44,7 @@
 
                 <!-- Valor de venda -->
                 <ng-container matColumnDef="SaleValue">
-                  <mat-header-cell *matHeaderCellDef mat-sort-header> Valor de venda </mat-header-cell>
+                  <mat-header-cell *matHeaderCellDef mat-sort-header> Valor de Venda </mat-header-cell>
                   <mat-cell *matCellDef="let row"> {{row.SaleValue| currency : 'R$' }} </mat-cell>
                 </ng-container>
 
